src/objects/CAC_Subscription_Credit__c.object
<CustomObject>
    <description>Hold all the CAC Subscription Credits</description>
    <fields>
        <fullName>CAC_Subscription_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription Detail against which the credit is applied</description>
        <inlineHelpText>Subscription Detail against which the credit is applied</inlineHelpText>
        <label>CAC Subscription Detail</label>
        <referenceTo>CAC_Subscription_Detail__c</referenceTo>
        <relationshipLabel>CAC Subscription Credits</relationshipLabel>
        <relationshipName>CAC_Subscription_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <description>Credit Applied up on the consumption</description>
        <inlineHelpText>Credit Applied up on the consumption</inlineHelpText>
        <label>Credit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of when the credit has been applied</description>
        <inlineHelpText>Date of when the credit has been applied</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>CAC Subscription Credit</label>
    <nameField>
        <displayFormat>CT-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAC Subscription Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>